[project]
name = "ironhand"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Tuomas Virtanen",email = "katajakasa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "pywa (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



